--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,11 @@ button:focus-visible {
   }
 } */
 
+/* html {
+  position: relative;
+  min-height: 100%;
+} */
+
 * {
   margin: 0;
   padding: 0;
@@ -75,11 +80,12 @@ button:focus-visible {
 }
 
 .custom-container {
+  width: 90%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
+  align-content: center;
 }
 
 .header {
@@ -87,7 +93,7 @@ button:focus-visible {
   background-color: white;
   box-shadow: 0px 3px 4px 1px rgba(200, 200, 200, 0.3);
   height: 6rem;
-  width:100vw;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -97,7 +103,7 @@ button:focus-visible {
   margin: 0;
   width: 90%;
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -125,10 +131,30 @@ button:focus-visible {
 }
 
 .search-group-buttons {
-  background-color: red;
+  background-color: brown;
   width: 20rem;
   height: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.custom-col {
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 30px;
+}
+
+.custom-card {
+  height: 450px !important;
+  border: none !important; /* Remove border */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add drop shadow */
+  border-radius: 20px !important;
+}
+
+.carousel-image {
+  height: 300px;
+  object-fit: cover;
+  border-top-left-radius: 15px !important;
+  border-top-right-radius: 15px !important;
 }
