--- a/src/index.css
+++ b/src/index.css
@@ -108,8 +108,7 @@ button:focus-visible {
 }
 
 @media (max-width: 600px) {
-  .logo-header,
-  .button-login {
+  .logo-header {
     display: none;
   }
   .header-container {
@@ -124,6 +123,7 @@ button:focus-visible {
 
 .logo-header {
   width: 8rem;
+  margin-right: 10px;
 }
 
 .button-login {
@@ -139,6 +139,10 @@ button:focus-visible {
   align-items: center;
 }
 
+.search-button {
+  margin-right: 5px;
+}
+
 .custom-col {
   padding-left: 15px;
   padding-right: 15px;
@@ -146,15 +150,37 @@ button:focus-visible {
 }
 
 .custom-card {
-  height: 450px !important;
+  height: 380px !important;
   border: none !important; /* Remove border */
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add drop shadow */
   border-radius: 20px !important;
 }
 
 .carousel-image {
-  height: 300px;
+  height: 250px;
   object-fit: cover;
   border-top-left-radius: 15px !important;
   border-top-right-radius: 15px !important;
+}
+
+.text-small {
+  font-size: 14px;
+}
+
+.red-heart {
+  color: red;
+}
+
+.rounded-left-input {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+  /* width: 200px !important; */
+}
+
+/* Remove rounded corners from Ant Design RangePicker */
+.ant-picker-input {
+  border-radius: 0 !important;
+  margin-right: 2px;
 }
