--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --pink: #ca0087;
+}
 
 .custom-container {
   width: 90%;
@@ -66,6 +69,9 @@
 
 .search-button {
   margin-right: 5px;
+  background-color: var(--pink) !important;
+  color: white !important;
+  border: 1px solid rgb(214, 214, 214) !important;
 }
 
 .custom-col {
@@ -101,13 +107,41 @@
   border-bottom-left-radius: 0.25rem;
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
-  /* width: 200px !important; */
+  box-shadow: none !important;
 }
 
-/* Remove rounded corners from Ant Design RangePicker */
+.rounded-bottom-input {
+  border-top: 0;
+  border-top-right-radius: 0 !important;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
+}
+
 .ant-picker-input {
+  width: 100%;
   border-radius: 0 !important;
-  margin-right: 2px;
+  border-top-left-radius: 10px !important;
+  border-top-right-radius: 10px !important;
+}
+
+.ant-picker-input-header {
+  width: 100%;
+  border-radius: 0 !important;
+  border-left: none !important;
+}
+
+.ant-input-number-input::placeholder {
+  text-align: center;
+  line-height: 50px !important;
+}
+
+.ant-input-number {
+  width: 100%;
+}
+
+.ant-input-number-input {
+  text-align: center !important;
 }
 
 .login-icon {
@@ -127,4 +161,12 @@
 
 .room-details-container {
   width: 60% !important;
+}
+
+.reserve-button {
+  margin-top: 10px;
+  width: 100%;
+  border: none;
+  color: white;
+  background-color: var(--pink);
 }
