--- a/src/index.css
+++ b/src/index.css
@@ -170,3 +170,10 @@
   color: white;
   background-color: var(--pink);
 }
+
+.map-container {
+  width: 100%;
+  height: 400px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
